--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-devui-admin",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "license": "MIT",
   "description": "DevUI Admin based on Angular and DevUI components",
   "repository": {
@@ -35,8 +35,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "color": "^3.1.3",
     "echarts": "^5.1.1",
-    "ng-devui": "^12.0.0-beta.1",
-    "ng-packagr": "^12.0.5",
+    "ng-devui": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
