--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-devui-admin",
-  "version": "2.0.0",
+  "version": "13.0.0",
   "license": "MIT",
   "description": "DevUI Admin based on Angular and DevUI components",
   "repository": {
@@ -21,29 +21,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.4",
-    "@angular/cdk": "^12.0.4",
-    "@angular/common": "~12.0.4",
-    "@angular/compiler": "~12.0.4",
-    "@angular/core": "~12.0.4",
-    "@angular/forms": "~12.0.4",
-    "@angular/platform-browser": "~12.0.4",
-    "@angular/platform-browser-dynamic": "~12.0.4",
-    "@angular/router": "~12.0.4",
-    "@devui-design/icons": "^1.2.0",
-    "@ngx-translate/core": "^13.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
+    "@angular/animations": "~13.2.1",
+    "@angular/cdk": "13.2.1",
+    "@angular/common": "~13.2.1",
+    "@angular/compiler": "~13.2.1",
+    "@angular/core": "~13.2.1",
+    "@angular/forms": "~13.2.1",
+    "@angular/platform-browser": "~13.2.1",
+    "@angular/platform-browser-dynamic": "~13.2.1",
+    "@angular/router": "~13.2.1",
+    "@devui-design/icons": "^1.3.0",
+    "@ngx-translate/core": "13.0.0",
+    "@ngx-translate/http-loader": "6.0.0",
     "color": "^3.1.3",
-    "echarts": "^5.1.1",
-    "ng-devui": "^12.0.0",
-    "rxjs": "~6.6.0",
+    "echarts": "5.2.1",
+    "ng-devui": "^13.2.0",
+    "rxjs": "6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.4",
-    "@angular/cli": "~12.0.4",
-    "@angular/compiler-cli": "~12.0.4",
+    "@angular-devkit/build-angular": "~13.2.1",
+    "@angular/cli": "~13.2.1",
+    "@angular/compiler-cli": "~13.2.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -63,6 +63,6 @@
     "stylelint-scss": "^3.19.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.2.4"
+    "typescript": "~4.5.5"
   }
 }
