--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-devui-admin",
-  "version": "13.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "description": "DevUI Admin based on Angular and DevUI components",
   "repository": {
@@ -21,29 +21,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.1",
-    "@angular/cdk": "13.2.1",
-    "@angular/common": "~13.2.1",
-    "@angular/compiler": "~13.2.1",
-    "@angular/core": "~13.2.1",
-    "@angular/forms": "~13.2.1",
-    "@angular/platform-browser": "~13.2.1",
-    "@angular/platform-browser-dynamic": "~13.2.1",
-    "@angular/router": "~13.2.1",
+    "@angular/animations": "15.1.2",
+    "@angular/cdk": "15.1.2",
+    "@angular/common": "15.1.2",
+    "@angular/compiler": "15.1.2",
+    "@angular/core": "15.1.2",
+    "@angular/forms": "15.1.2",
+    "@angular/platform-browser": "15.1.2",
+    "@angular/platform-browser-dynamic": "15.1.2",
+    "@angular/router": "15.1.2",
     "@devui-design/icons": "^1.3.0",
-    "@ngx-translate/core": "13.0.0",
-    "@ngx-translate/http-loader": "6.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "color": "^3.1.3",
     "echarts": "5.2.1",
-    "ng-devui": "^13.2.0",
-    "rxjs": "6.5.5",
+    "ng-devui": "^15.0.0",
+    "rxjs": "7.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.1",
-    "@angular/cli": "~13.2.1",
-    "@angular/compiler-cli": "~13.2.1",
+    "@angular-devkit/build-angular": "^15.2.2",
+    "@angular/cli": "^15.2.2",
+    "@angular/compiler-cli": "^15.2.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -63,6 +63,6 @@
     "stylelint-scss": "^3.19.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.9.5"
   }
 }
