--- a/package.json
+++ b/package.json
@@ -21,35 +21,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.1.2",
+    "@angular/animations": "^15.2.10",
     "@angular/cdk": "15.1.2",
-    "@angular/common": "15.1.2",
-    "@angular/compiler": "15.1.2",
-    "@angular/core": "15.1.2",
-    "@angular/forms": "15.1.2",
-    "@angular/platform-browser": "15.1.2",
-    "@angular/platform-browser-dynamic": "15.1.2",
-    "@angular/router": "15.1.2",
+    "@angular/common": "^15.2.10",
+    "@angular/compiler": "^15.2.10",
+    "@angular/core": "^15.2.10",
+    "@angular/forms": "^15.2.10",
+    "@angular/platform-browser": "^15.2.10",
+    "@angular/platform-browser-dynamic": "^15.2.10",
+    "@angular/router": "^15.2.10",
     "@devui-design/icons": "^1.3.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "color": "^3.1.3",
     "echarts": "5.2.1",
+    "gridstack": "^6.0.0",
     "ng-devui": "^15.0.0",
     "rxjs": "7.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4",
-    "gridstack": "^6.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.2",
     "@angular/cli": "^15.2.2",
-    "@angular/compiler-cli": "^15.2.2",
+    "@angular/compiler-cli": "^15.2.10",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "angular-eslint": "20.1.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "eslint": "^9.29.0",
+    "jasmine-core": "^4.0.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
@@ -64,6 +66,7 @@
     "stylelint-scss": "^3.19.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "typescript-eslint": "8.34.1"
   }
 }
