--- a/package.json
+++ b/package.json
@@ -42,14 +42,14 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.2",
+    "@angular-devkit/build-angular": "^20.1.2",
     "@angular/cli": "^15.2.2",
     "@angular/compiler-cli": "^15.2.10",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "angular-eslint": "20.1.1",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^0.0.28",
     "eslint": "^9.29.0",
     "jasmine-core": "^4.0.1",
     "jasmine-spec-reporter": "~5.0.0",
@@ -58,12 +58,12 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "shelljs": "^0.8.4",
-    "stylelint": "^13.13.0",
-    "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-scss": "^3.19.0",
+    "stylelint": "^16.22.0",
+    "stylelint-config-recommended-scss": "^15.0.1",
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-scss": "^6.12.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.9.5",
