--- a/.github/workflows/sonar-gpt-pipeline.yml
+++ b/.github/workflows/sonar-gpt-pipeline.yml
@@ -33,7 +33,8 @@ jobs:
         run: npm run build --if-present
   
       - name: Run ESLint
-        run: npx eslint --config ./eslint.config.js src --format json -o eslint-report.json
+        run: npx eslint src --ext .ts,.html --format json -o eslint-report.json
+
 
 
       - name: Download SonarScanner
