--- a/.github/workflows/sonar-gpt-pipeline.yml
+++ b/.github/workflows/sonar-gpt-pipeline.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm run build --if-present
   
       - name: Run ESLint
-        run: npx eslint "src/**/*.{ts,html}" --format json -o eslint-report.json
+        run: npx eslint "src/**/*.{ts,html}" --format json -o eslint-report.json --no-error-on-unmatched-pattern || true
 
 
 
