--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
-sonar.projectKey=Devui
-sonar.projectName=Devui
+sonar.projectKey=Deuvi
+sonar.projectName=Deuvi
 sonar.projectVersion=1.0
 
 # Source encoding
