--- a/.github/workflows/sonar-gpt-pipeline.yml
+++ b/.github/workflows/sonar-gpt-pipeline.yml
@@ -51,7 +51,7 @@ jobs:
             -Dsonar.host.url=http://13.89.226.182:9000 \
             -Dsonar.token=${{ env.SONAR_TOKEN }} \
             -Dsonar.qualitygate.wait=true \
-            
+
           #  -Dsonar.scm.provider=git || true
           
           # Store the task ID for later API calls
@@ -93,17 +93,18 @@ jobs:
           jq '{issues: [.issues[] | {file: .component, message: .message, severity: .severity, rule: .rule}]}' sonar-report.json > reduced-sonar-report.json
 
       # Upload the reduced report to Azure Blob Storage
-      - name: Upload to Azure Blob Storage
+      - name: Upload SonarQube Report to Blob Storage
         uses: azure/cli@v2
         with:
           azcliversion: 2.53.0
           inlineScript: |
             az storage blob upload \
-              --account-name ${{ env.AZURE_STORAGE_ACCOUNT }} \
+              --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} \
               --container-name sonarinput \
               --name "reduced-sonar-report-$(date +%Y%m%d%H%M%S).json" \
               --file reduced-sonar-report.json \
-              --sas-token ${{ env.BLOB_SAS_TOKEN }}
+              --sas-token ${{ secrets.BLOB_SAS_TOKEN }}
+
 
       - name: Job complete
         run: echo "SonarQube scan finished and report uploaded for GPT-4.1 analysis."
