--- a/.github/workflows/sonar-gpt-pipeline.yml
+++ b/.github/workflows/sonar-gpt-pipeline.yml
@@ -98,12 +98,15 @@ jobs:
         with:
           azcliversion: 2.53.0
           inlineScript: |
-            az storage blob upload \
-              --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} \
-              --container-name sonarinput \
-              --name "reduced-sonar-report-$(date +%Y%m%d%H%M%S).json" \
-              --file reduced-sonar-report.json \
-              --sas-token ${{ secrets.BLOB_SAS_TOKEN }}
+            for FILE in reduced-sonar-report.json beautified-sonar-report.json; do
+              az storage blob upload \
+                --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} \
+                --container-name sonarinput \
+                --name "$FILE-$(date +%Y%m%d%H%M%S)" \
+                --file "$FILE" \
+                --sas-token ${{ secrets.BLOB_SAS_TOKEN }} \
+                --auth-mode key
+            done
 
 
       - name: Job complete
